packages/docs/content/4.0/api/CTooltip.api.mdx

```jsx
import { CTooltip } from '@coreui/react'
// or
import CTooltip from '@coreui/react//Users/lukaszholeczek/CoreUI/@coreui/react/packages/coreui-react/src/components/tooltip/CTooltip'
```

| Property | Description | Type | Default |
| --- | --- | --- | --- |
| **content** | Content node for your component. | `ReactNode` | - |
| **onHide** | Callback fired when the component requests to be hidden. | `() => void` | - |
| **onShow** | Callback fired when the component requests to be shown. | `() => void` | - |
| **placement** | Describes the placement of your component after Popper.js has applied all the modifiers that may have flipped or altered the originally provided placement property. | `'auto'` \| `'top'` \| `'right'` \| `'bottom'` \| `'left'` | top |
| **trigger** | Sets which event handlers you’d like provided to your toggle prop. You can specify one trigger or an array of them. | `'hover'` \| `'focus'` \| `'click'` | hover |
| **visible** | Toggle the visibility of popover component. | `boolean` | - |
